--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,6 +16,22 @@ jobs:
   tests:
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:5.7
+        ports:
+          - 3306:3306
+        env:
+          MYSQL_DATABASE: graduate_work
+          MYSQL_USER: root
+          MYSQL_PASSWORD: root
+          MYSQL_ROOT_PASSWORD: root
+        options: >-
+          --health-cmd="mysqladmin ping --silent"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
+
     strategy:
       fail-fast: true
       matrix:
@@ -51,10 +67,8 @@ jobs:
       - name: Generate app key
         run: php artisan key:generate
 
-      - name: Set up database (если требуется)
+      - name: Wait for MySQL to be ready
         run: |
-          cp .env.example .env
-          php artisan migrate --env=testing
-
-      - name: Execute tests
-        run: vendor/bin/phpunit
+          for i in {1..30}; do
+            echo "Waiting for MySQL to be ready..."
+            if mysqladmin ping -h127.0.0.1 -uroot
