--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -69,7 +69,7 @@ jobs:
         run: |
           for i in {1..30}; do
             echo "Waiting for MySQL to be ready... ($i/30)"
-            if mysqladmin ping -hmysql -uroot --silent; then
+            if mysqladmin ping -hmysql -uroot -proot --silent; then
               echo "MySQL is ready!"
               break
             fi
