--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -68,12 +68,12 @@ jobs:
       - name: Wait for MySQL to be ready
         run: |
           for i in {1..30}; do
-            echo "Waiting for MySQL to be ready... ($i/30)"
-            if mysqladmin ping -hmysql --silent; then
-              echo "MySQL is ready!"
-              break
-            fi
-            sleep 2
+              echo "Waiting for MySQL to be ready... ($i/30)"
+              if mysqladmin ping -hmysql -uroot -proot --silent; then
+                  echo "MySQL is ready!"
+                  break
+              fi
+              sleep 2
           done
 
       - name: Run Tests
