FN-2. add tests to ci

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -87,4 +87,4 @@ jobs:
         run: php artisan migrate --env=testing
 
       - name: Run Tests
-        run: vendor/bin/phpunit
+        run: vendor/bin/phpunit --configuration phpunit.xml
