--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,17 +1,3 @@
-name: Tests
-
-on:
-  push:
-    branches:
-      - master
-      - '*.x'
-  pull_request:
-  schedule:
-    - cron: '0 0 * * *'
-
-permissions:
-  contents: read
-
 jobs:
   tests:
     runs-on: ubuntu-latest
@@ -40,6 +26,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          path: finance_app
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -87,4 +75,4 @@ jobs:
         run: php artisan migrate --env=testing
 
       - name: Run Tests
-        run: vendor/bin/phpunit --configuration phpunit.xml
+        run: vendor/bin/phpunit --configuration phpuni
